@@ -10,7 +10,7 @@
   <script type="text/javascript" src="../node_modules/requirejs/require.js"></script>
   <script type="text/javascript">
   require([
-    './allMatchers',
+    '../dist/matchers',
 
     './toBe-spec',
     './toHave-spec',
